# scalarff

./: Cargo.toml  README.md
.circleci/: config.yml
examples/: 1000_residues.rs
src/: alt_bn128.rs  curve_25519.rs  custom.rs  foi.rs  foi_slow.rs  functions.rs  lib.rs  matrix.rs  oxfoi.rs  oxfoi_slow.rs  timing.rs
