[package]
name = "scalarff"
version = "0.3.1"
edition = "2021"
authors = ["Chance Hudson <PSE>"]
description = "A minimal, opinionated, library for working with scalar finite fields."
homepage = "https://github.com/chancehudson/scalarff"
repository = "https://github.com/chancehudson/scalarff.git"
license = "MIT OR Apache-2.0"

[lib]
name = "scalarff"

[dependencies]
anyhow = "1.0.86"
num-bigint = "0.4.6"
num-integer = "0.1.46"
colored = "2.1.0"
ark-ff = "=0.4.1"
ark-bn254 = "0.4.0"
ark-std = "0.4.0"
curve25519-dalek = { version = "4.1.3", features = ["group"] }
ff = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
twenty-first = { version = "0.41.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[[example]]
name = "1000_residues"
crate-type = ["bin"]
