[package]
name = "scalarff"
version = "0.5.2"
edition = "2021"
authors = ["Chance Hudson <PSE>"]
description = "A minimal, opinionated, library for working with scalar finite fields."
homepage = "https://github.com/chancehudson/scalarff"
repository = "https://github.com/chancehudson/scalarff.git"
license = "MIT OR Apache-2.0"

[lib]
name = "scalarff"

[features]
default = []

random = ["rand"]

curve25519 = ["curve25519-dalek", "ff"]
alt_bn128 = ["ark-bn254", "ark-ff", "ark-std"]
oxfoi = ["twenty-first"]

[dependencies]
num-bigint = "0.4.6"
num-integer = "0.1.46"
colored = "2.1.0"
rand = { version = "0.8.4", optional = true }

# curve25519
curve25519-dalek = { version = "4.1.3", optional = true, features = ["group"] }
ff = { version = "0.13.0", optional = true }

# alt_bn128
ark-bn254 = { version = "0.4.0", optional = true }
ark-std = { version = "0.4.0", optional = true }
ark-ff = { version = "0.4.1", optional = true }

# oxfoi

# the twenty-first crate is not wasm32 compatible
# to solve this we provide a simple implementation based
# on the u64/u128 type
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
twenty-first = { version = "0.41.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[[example]]
name = "1000_residues"
crate-type = ["bin"]
